fix: add styles to prevent horizontal scroll and manage overscroll behavior in global CSS

--- a/styles/global.css
+++ b/styles/global.css
@@ -15,6 +15,8 @@ html {
   /* cursor: url('/images/cursor.svg'), auto; */
   scrollbar-color: var(--header-animation-color) #0f172a;
   scrollbar-width: thin;
+  overscroll-behavior-x: none;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
